# adxl372

./: Cargo.toml  README.md
examples/espressif/: README.md
examples/espressif/basic/: Cargo.toml
examples/espressif/basic/src/: main.rs
src/: config.rs  device.rs  error.rs  fifo.rs  lib.rs  log.rs  params.rs  registers.rs  self_test.rs
src/interface/: mod.rs  spi.rs
