[package]
edition      = "2024"
name         = "basic"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "basic"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.1.0", features = ["defmt", "esp32c3", "unstable"] }


defmt                  = "1.1.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

embedded-hal           = { version = "1.0.0" }
embedded-hal-bus       = { version = "0.3.0" }

adxl372                = { path = "../../../", features = ["defmt"]}

critical-section = "1.2.0"
rtt-target       = { version = "0.6.2", features = ["defmt"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
